Fix for table view on mobile

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/richtext/_richText.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/richtext/_richText.scss
@@ -208,6 +208,7 @@
         th {
             @include padding-left(8px);
             @include padding-right(14px);
+            white-space: pre-wrap;
         }
     }
     @media #{$desktop} {
